--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -27,8 +27,11 @@ button{
     display: block;
 }
 .textAreaElement{
-    text-align: right;
-    align: right;
+        text-align: right;
+        align: right;
+        display: inline-block;
+        width: 100px;
+        padding:10px;
 }
 
 .paddingTop{
